fix: fix some styles in scan layout including scrollbar

--- a/src/app/pages/scan/result/result.component.scss
+++ b/src/app/pages/scan/result/result.component.scss
@@ -3,6 +3,8 @@
 :host {
   height: 100%;
   overflow: auto;
+  padding: 0 1rem;
+  @include vertical-scrollbar;
 }
 
 ul.result {
@@ -30,6 +32,7 @@ ul.result {
       display: flex;
       align-items: center;
       flex-grow: 1;
+      word-break: break-all;
     }
   }
 }
