--- a/src/app/pages/scan/scan.component.scss
+++ b/src/app/pages/scan/scan.component.scss
@@ -33,4 +33,8 @@ h1.title {
   box-sizing: border-box;
   min-height: 0;
   display: flex;
+  > * {
+    width: 100%;
+    height: 100%;
+  }
 }
